--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Circular Std Bold';
+  src: local("Circular Std Bold"), 
+       url('/assets/fonts/circularstd-bold.otf') format("opentype"), 
+       url('/assets/fonts/circularstd-bold.woff') format("woff");
+  font-weight: bold;
+  font-style: normal;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
